gccida/c0/count_error
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/count_error/src/diagnostic.c:1395:19: error: use of undeclared identifier 'count_error_warning_message'
if ( warningp && !count_error_warning_message ) 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/count_error/src/diagnostic.c:1398:1: error: use of undeclared identifier 'count_error_warning_message'
count_error_warning_message = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/count_error/src/obj/diagnostic.o] Error 1
